with requirements.txt file

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,32 +1,18 @@
 jupyter==1.0.0
 multipledispatch==0.6.0
-munch==2.5.0
 mypy-extensions==0.4.3
 networkx==2.3
 oauthlib==3.1.1
-olefile==0.46
-opencv-python==4.5.4.58
-opt-einsum==3.3.0
 pandas==1.2.4
 pathspec==0.7.0
 pep8==1.7.1
 pkginfo==1.7.0
 plotly==5.3.1
 ply==3.11
-pmdarima==1.8.4
-psycopg2-binary==2.9.1
-pyarrow==6.0.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyMeeus==0.5.11
-pymongo==3.12.0
-Pympler==0.9
 pynndescent==0.5.5
 pytest==6.2.3
 scikit-learn==1.0
 Shapely==1.8.0
 sklearn==0.0
-smart-open==5.2.1
-smmap==5.0.0
 wordcloud==1.8.1
-wrapt==1.12.1
+seaborn==0.11.1
