--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -13,6 +13,10 @@ pynndescent==0.5.5
 pytest==6.2.3
 scikit-learn==1.0
 Shapely==1.8.0
-sklearn==0.0
+sklearn==0.24.2
 wordcloud==1.8.1
 seaborn==0.11.1
+bs4==4.9.3
+matplotlib==3.3.4
+tqdm==4.59.0
+gensim==3.8.3
